add debug categories