@@ -21,7 +21,7 @@
         <!-- RHDG 8.4.2 -->
         <version.infinispan>14.0.9.Final-redhat-00001</version.infinispan>
         <lombok.version>1.18.22</lombok.version>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -122,12 +122,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>11</source>
+                    <target>11</target>
                     <!--                    <release>16</release>-->
                     <!--<fork>true</fork>-->
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+                        <!--<arg> - -enable-preview</arg>-->
                         <arg>-Xlint:all</arg>
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
